dev/tests/cases/pos/32_apply_module.tv
apply helpers32;

df main() -> void {
    echo!(helper_add(2, 3));
    echo!(helper_name());
}
