dev/tests/cases/neg/53_optional_missing_required.tv
df label(base: str, ^suffix: str) -> void { echo!(base); }
df main() -> void {
    label();
}
